Fix table form rendering & tweak progress bar spacing

--- a/res/~resources/css/progressbar.css
+++ b/res/~resources/css/progressbar.css
@@ -53,6 +53,7 @@ div.progress-bar > span {
                 1px  1px rgba(0, 0, 0, 0.4),
                 1px  1px 2px #000000;
   /* @formatter:on */
+  letter-spacing: 0.3px;
   margin-top: -21px;
 }
 
